# xtt-cpp

./: .travis.yml  CMakeLists.txt  README.md  xtt-cpp-config.cmake.in  xtt-cpp.pc.in
.docker/: Dockerfile  Makefile
asio/: CMakeLists.txt
asio/include/xtt/: asio.hpp
asio/include/xtt/asio/: error_category.hpp  server_context.hpp  server_context.inl
asio/src/: server_context.cpp
cpp/: CMakeLists.txt  config.hpp.in
cpp/include/: xtt.hpp
cpp/include/xtt/: crypto.hpp  group_identity.hpp  group_public_key_context.hpp  identity.hpp  longterm_key.hpp  pseudonym.hpp  server_certificate_context.hpp  server_cookie_context.hpp  server_handshake_context.hpp  types.hpp
cpp/src/: crypto.cpp  group_identity.cpp  group_public_key_context.cpp  identity.cpp  longterm_key.cpp  pseudonym.cpp  server_certificate_context.cpp  server_handshake_context.cpp
cpp/src/internal/: text_to_binary.hpp
examples/: CMakeLists.txt  xtt_asio_server.cpp
test/: CMakeLists.txt  group_identity_Test.cpp  group_public_key_context_Test.cpp  identity_Test.cpp  internal-text_to_binary_Test.cpp  longterm_key_Test.cpp  pseudonym_Test.cpp  server_certificate_Test.cpp  test-utils.h
